# learning-ai-nebius-ai-engineering-2026

./: .gitignore  PLAN.md  README.md  assignment_cli.py  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml
ai-product-2/: ai-product-2.ipynb  ai-product-2.py
ai-product-2/data/assignment2/: financebench.json
ai-product-2/outputs/assignment2/: assignment2_evaluation.csv  assignment2_evaluation.xlsx  assignment2_improvement_cycles.csv  assignment2_improvement_cycles.xlsx  assignment2_naive_generation.csv  assignment2_naive_generation.xlsx  assignment2_run_and_compare.csv  assignment2_run_and_compare.xlsx
tests/: conftest.py  test_artifacts.py  test_config.py  test_judge_runtime.py  test_notebooks_smoke.py  test_rubric.py  test_runtime.py  test_task4_export.py  test_utils.py
w2-ai-product/: .env.example  Assignment_01_product_dataset.csv  agents.md  assignment_colab.ipynb  assignment_colab.py  handoff.md  report_notes.md
w2-ai-product/notebooks/: 01_rubric.py  02_generate.py  03_human_eval.py  04_improve.py  05_judge.py  06_analysis.py  _bootstrap.py
w2-ai-product/outputs/: assignment_01.xlsx  task_04_experiments.xlsx  task_05_judge_sanity.csv  task_06_judged_experiments.csv
w2-ai-product/prompts/: generation_selector_v1.txt  generation_v1.txt  generation_v2.txt  generation_v3_voice.txt  generation_v4_scaffold.txt  judge_all.txt  judge_single.txt
w2-ai-product/src/: artifacts.py  config.py  judge_runtime.py  paths.py  rubric.py  runtime.py  schemas.py  task4_export.py  utils.py
w2-llm-arch/: LLM_Architectures,_hometask_1.ipynb
(+23 files in other folders)
